[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
serde_json= "1.0.108"
hex = "0.4"
tokio ={ version = "1.34.0", features = ["full"] }
chrono = "0.4"
rand = "0.8"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
config = "0.13.4"
log = "0.4.20"
log4rs = "1.2.0"